# AQAPythonCourse

./: .env.example  .gitignore  README.md  conftest.py  hello.py  loops_practice.py  pyproject.toml  pytest.ini  pytest.ini.py
components/: base.py
components/playwright/: solutions.py
components/selenium/: solutions.py
pages/: base.py  login.py
pages/playwright/: cicd.py  contact.py  git_login.py  home.py  login.py
pages/selenium/: cicd.py  contact.py  git_login.py  home.py  login.py
tests/: test_login.py  test_sample.py
ui/tests/: test_contact_playwright.py  test_contact_selenium.py  test_git_login_playwright.py  test_git_login_selenium.py
