[project]
name = "aqa"
version = "0.1.0"
description = ""
authors = [
    {name = "katinagon",email = "katinagon@yandex.ru"}
]
requires-python = ">=3.14"
dependencies = [
    "pytest (>=9.0.3,<10.0.0)",
    "selenium (>=4.44.0,<5.0.0)",
    "selene (>=1.0.2,<2.0.0)",
    "webdriver-manager (>=4.0.2,<5.0.0)",
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "flake8 (>=7.3.0,<8.0.0)",
    "black (>=26.3.1,<27.0.0)",
    "isort (>=8.0.1,<9.0.0)"
]
